# drift-predictor

./: .env.example  .gitignore  LICENSE  README.md  config.json  model_runner.py  pipeline.py  pyproject.toml  reporter.py  requirements.txt  validator.py
data/benchmark_results/: claude_migration_20260527_175215.jsonl  claude_migration_20260527_175215_summary.txt  claude_migration_20260610_015116.jsonl  claude_migration_20260610_015116_summary.txt  claude_migration_20260610_083126.jsonl  claude_migration_20260610_083126_summary.txt  claude_migration_prompts_hard_20260610_023912.jsonl  claude_migration_prompts_hard_20260610_023912_summary.txt  claude_migration_prompts_hard_20260610_093426.jsonl  claude_migration_prompts_hard_20260610_093426_summary.txt  gemini_migration_20260527_162852.jsonl  gemini_migration_20260527_162852_summary.txt  gemini_migration_20260527_173719.jsonl  gemini_migration_20260527_173719_summary.txt  gemini_migration_20260530_150255.jsonl  gemini_migration_20260530_150255_summary.txt  gemini_migration_20260530_224255.jsonl  gemini_migration_20260530_224255_summary.txt  gemini_migration_20260609_170216.jsonl  gemini_migration_20260609_170216_summary.txt  gemini_migration_20260609_172936.jsonl  gemini_migration_20260609_172936_summary.txt  gemini_migration_20260609_182638.jsonl  gemini_migration_20260609_182638_summary.txt  (+30 more)
paper/: build_pdf.sh  claude_findings.md  draft.md  gemini_findings.md  paper_brief.md  pdf_header.typ
scripts/: analyze_flips.py  compute_stats.py  run_benchmark.py  run_pilot.py
src/: models.py
tests/: test_runners.py
(+70 files in other folders)
